# Task2

./: CMakeLists.txt  in.txt  main.cpp
Point/: Point.cpp  Point.h
Polygon/: Polygon.cpp  Polygon.h
Segment/: Segment.cpp  Segment.h
SymmetryAxisesFinder/: SymmetryAxisesFinder.cpp  SymmetryAxisesFinder.h
test/: test_symmetry_axises_finder.cpp
